--- a/manage-course.html
+++ b/manage-course.html
@@ -64,16 +64,21 @@
                 <div class="row">
                     <div class="col col-12 col-lg-4">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter Customer ID" id="txtCustomerID">
+                            <input type="text" class="form-control" placeholder="Enter Course ID" id="txtCourseID">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter Customer Name" id="txtCustomerIName">
+                            <input type="text" class="form-control" placeholder="Enter Course Name" id="txtCourseName">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter Customer Address" id="txtCustomerAddress">
+                            <input type="text" class="form-control" placeholder="Enter Course Description" id="txtCourseDescription">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Enter Course Duration" id="txtCourseDuration">
                         </div>
                         <div class="form-group text-center">
                             <button class="btn btn-primary" id="btn-save">Save</button>
+                            <button class="btn btn-warning" id="btn-edit">Edit</button>
+                            <button class="btn btn-danger" id="btn-delete">Delete</button>
                             <button class="btn btn-success btn-clear" >Clear</button>
                         </div>
                     </div>
@@ -89,8 +94,8 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Name</th>
-                                <th>Address</th>
-                                <th>Delete</th>
+                                <th>Desctription</th>
+                                <th>Duration</th>
                             </tr>
                             </thead>
                             <tbody id="tbody">
