--- a/manage-course.html
+++ b/manage-course.html
@@ -7,11 +7,9 @@
     <title>Modern POS · DEP</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Custom styles -->
     <link href="css/styles.css" rel="stylesheet">
     <!-- Manage Customer Styles -->
@@ -64,6 +62,7 @@
                 <div class="row">
                     <div class="col col-12 col-lg-4">
                         <div class="form-group">
+
                             <input type="text" class="form-control" placeholder="Enter Customer ID" id="txtCustomerID">
                         </div>
                         <div class="form-group">
