Create new Registration html

--- a/manage-batch.html
+++ b/manage-batch.html
@@ -8,10 +8,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    >
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Custom styles -->
     <link href="css/styles.css" rel="stylesheet">
     <!-- Manage Customer Styles -->
@@ -47,7 +46,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="place-order.html">
+                        <a class="nav-link" href="manage-register-student.html">
                             <i class="fas fa-shopping-cart"></i>
                             Register Student
                         </a>
@@ -67,13 +66,15 @@
                             <input type="text" class="form-control" placeholder="Enter Item Code" id="txtItemCode">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter Item Description" id="txtItemDescription">
+                            <input type="text" class="form-control" placeholder="Enter Item Description"
+                                   id="txtItemDescription">
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Enter Item Qty" id="txtItemQty">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter Item Unit Price" id="txtItemUnitPrice">
+                            <input type="text" class="form-control" placeholder="Enter Item Unit Price"
+                                   id="txtItemUnitPrice">
                         </div>
                         <div class="form-group text-center">
                             <button class="btn btn-primary" id="btn-save">Save</button>
