--- a/manage-course.html
+++ b/manage-course.html
@@ -75,9 +75,9 @@
                         </div>
                         <div class="form-group text-center">
                             <button class="btn btn-primary" id="btn-save">Save</button>
-                            <button class="btn btn-warning" id="btn-edit">Edit</button>
-                            <button class="btn btn-danger" id="btn-delete">Delete</button>
-                            <button class="btn btn-success btn-clear" >Clear</button>
+                            <!--<button class="btn btn-warning" id="btn-edit">Edit</button>-->
+                            <!--<button class="btn btn-danger" id="btn-delete">Delete</button>-->
+                            <!--<button class="btn btn-success btn-clear" >Clear</button>-->
                         </div>
                     </div>
                     <div class="col col-12 col-lg-8">
@@ -92,7 +92,7 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Name</th>
-                                <th>Desctription</th>
+                                <th>Description</th>
                                 <th>Duration</th>
                             </tr>
                             </thead>
@@ -113,5 +113,6 @@
 <script src="js/manage-customer.js"></script>
 <!--Database Script-->
 <script src="js/database.js"></script>
+<script src="js/manage-course.js"></script>
 </body>
 </html>
